Cập nhật Realtime flow capture & Cập nhật push, pull flow data